# MathLibComparison

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MathLibCompare.pro  README.md  VectorComparison  VectorComparison.pro  cmake_install.cmake
Vec4Mat4/: CMakeLists.txt  Construction.cpp  Functions.h  Math.cpp  Vec4Mat4.cpp
docs/: Introduction.md  Vec2Mat2.md  Vec3Mat3.md  Vec4Mat4.md
include/: NGLExamples.cpp  NGLExamples.h
src/: NGLExamples.cpp  main.cpp
